<resources>
    <string name="app_name">半价商城</string>
    <string name="bottom_tab_indiana">夺宝</string>
    <string name="bottom_tab_newest">最新揭晓</string>
    <string name="bottom_tab_share">晒单</string>
    <string name="bottom_tab_service">客服</string>
    <string name="bottom_tab_car">购物车</string>
    <string name="bottom_tab_mine">我的</string>
    <string name="bottom_tab_rank">榜单</string>
    <string name="bottom_tab_trend">开奖走势</string>

    <string name="press_again_exit">再按一次退出</string>

    <string name="indiana_toolbar_text">一元夺宝</string>

    <string name="please_edit_phone_munber">请输入手机号</string>
    <string name="please_edit_password">请输入密码</string>
    <string name="please_comfirm_you_password">请确认您的密码</string>
    <string name="lose_password">忘记密码？</string>

    <string name="is_logining">正在登录，请稍候&#8230;</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="fast_register">手机号一键注册</string>
    <string name="use_others_way_login">使用第三方登录</string>
    <string name="wechat_login">微信登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="what_is_app">什么是一元夺宝</string>
    <string name="service_agreement">服务协议</string>
    <string name="app_copyright">半价夺宝版权所有</string>
    <string name="verification">验证码</string>
    <string name="get_verification">获取验证码</string>
    <string name="phone_number">手机号</string>
    <string name="resend">重发（%1$s）</string>
    <string name="next_step">下一步</string>
    <string name="i_has_read_and_agree">我已阅读并同意</string>
    <string name="user_use_agreement">《用户使用协议》</string>
    <string name="is_get_verification">正在获取验证码，请稍候&#8230;</string>

    <string name="set_password">设置密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="password_hint">请设置6&#8211;20位数字或字母</string>
    <string name="complete">完成</string>
    <string name="twice_password_different">两次输入的密码不一致</string>
    <string name="is_registing">正在注册，请稍候&#8230;</string>
    <string name="password_length_6_20">密码长度为6&#8211;20位之间</string>
    <string name="register_fail_retry">注册失败，请重试</string>

    <string name="popular">人气</string>
    <string name="newest">最新</string>
    <string name="fastest">最快</string>
    <string name="price">价格</string>

    <string name="indiana_price_10">10元夺宝</string>
    <string name="indiana_fast">秒开夺宝</string>
    <string name="indiana_red88">88元红包</string>
    <string name="invite_money">邀请赚钱</string>
    <string name="indiana_headline">夺宝头条</string>
    <string name="newest_announced">最新揭晓</string>
    <string name="more">更多</string>
    <string name="lottery_progress">开奖进度</string>
    <string name="immediately_indiana">立即夺宝</string>
    <string name="count_down">倒计时</string>
    <string name="mine_level">等级：V%1$d</string>
    <string name="mine_score">积分：%1$d</string>
    <string name="indiana_coin">夺宝币：</string>
    <string name="coin_number">%1$s个</string>
    <string name="recharge">充值</string>
    <string name="indiana_record">夺宝记录</string>
    <string name="win_record">中奖记录</string>
    <string name="indiana_raiders">夺宝攻略</string>
    <string name="mine_share">我的晒单</string>
    <string name="mine_collect">我的收藏</string>
    <string name="receiver_address">我的收货地址</string>
    <string name="service_center">客服中心</string>
    <string name="share_app">分享一元夺宝</string>
    <string name="mine_red">我的红包</string>

    <string name="setting">设置</string>

    <string name="most_new">最新</string>
    <string name="most_hot">最热</string>
    <string name="share_goods_times">商品期数：第%1$s期</string>
    <string name="zan">赞</string>
    <string name="total">合计：</string>
    <string name="price_number">￥%1$s</string>
    <string name="car_is_none">购物车竟然空空的~</string>
    <string name="no_pain_no_gain">爱拼才会赢</string>
    <string name="guess_you_like">猜你喜欢</string>
    <string name="xx_times">第%1$d期</string>
    <string name="total_person_count">需%1$s人次</string>
    <string name="need_xx_person_count">需%1$d人次</string>
    <string name="surplus">剩余</string>
    <string name="person_time">人次</string>
    <string name="times_code">期号： 第%1$s期</string>
    <string name="soon_to_be_announced">即将揭晓</string>
    <string name="be_announcing">正在揭晓</string>
    <string name="get_user">获得用户：</string>
    <string name="join_person_time">参与人次：</string>
    <string name="luck_code">幸运号码：</string>
    <string name="announced_time">揭晓时间：</string>
    <string name="person_data">个人资料</string>
    <string name="click_update_avater">点击更改头像</string>
    <string name="username">用户昵称</string>
    <string name="phone_number2">手机号码</string>
    <string name="mine_receiver_address">收货地址</string>
    <string name="sex">性别</string>
    <string name="save">保存</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="my_share_order">我的晒单</string>
    <string name="add_new_address">添加新地址</string>
    <string name="default_address">默认地址</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="receiver_person">收货人</string>
    <string name="receiver_phone">联系电话</string>
    <string name="set_default">设为默认</string>
    <string name="add_address">添加地址</string>
    <string name="money_can_use">元可用</string>
    <string name="expiry_date">有效期：%1$s</string>
    <string name="now_use">立即使用</string>
    <string name="message_notice">消息提醒</string>
    <string name="clear_cache">清理缓存</string>
    <string name="clear_caching">正在清理缓存...</string>
    <string name="add_wish_goods">添加心愿商品</string>
    <string name="bug_feedback">问题反馈</string>
    <string name="user_agreement">用户协议</string>
    <string name="about_us">关于我们</string>
    <string name="exit_login">退出登录</string>
    <string name="send_your_wish_to_us_we_can_realize">把您希望上架的商品告诉我们，我们帮你实现愿望</string>
    <string name="please_edit_goods_name">请输入商品名称</string>
    <string name="submit">提交</string>
    <string name="bug_describe">问题描述：</string>
    <string name="edit_you_want_say">亲，在这里输入你想对我们说的话</string>
    <string name="contact_information">联系方式：</string>
    <string name="please_edit_contact_info">请输入联系方式，建议填写QQ号码</string>
    <string name="delete_address">删除地址</string>

    <string name="total_xx_goods">共%1$d件商品</string>
    <string name="comfire_pay">确认支付</string>
    <string name="total1">合计</string>
    <string name="indiana_coin1">夺宝币</string>
    <string name="red_envelope">红包抵扣：</string>
    <string name="still_need_pay">还需支付：</string>
    <string name="balance_pay">余额支付</string>
    <string name="account_balance">账户余额：</string>
    <string name="other_pay_way">其他支付方式</string>
    <string name="wechat_pay">微信支付</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="pay_order">支付订单</string>
    <string name="goods_times_code">第%1$s期</string>
    <string name="pending_count_down">揭晓倒计时</string>
    <string name="reckon_detail">计算详情</string>
    <string name="your_has_no_join">您还没参与，快去参与吧~</string>
    <string name="your_joined">您参与了</string>
    <string name="luck_code_xx">幸运号码：%1$s</string>
    <string name="see_all">查看全部</string>
    <string name="total_need_xx_person_times">总需%1$d人次</string>
    <string name="surplus_xx_person_times">剩余：%1$d人次</string>
    <string name="winner_xx">获奖者：%1$s</string>
    <string name="user_ip_xx">用户IP：%1$s</string>
    <string name="user_id_xx">用户ID：%1$s</string>
    <string name="this_time_join_xx_person_times">本期参与：%1$d人次</string>
    <string name="announced_time_xx">揭晓时间：%1$s</string>
    <string name="share_order_share">晒单分享</string>
    <string name="old_announced">往期揭晓</string>
    <string name="trend">趋势分析</string>
    <string name="image_text_detail">图文详情</string>
    <string name="collection">收藏</string>
    <string name="has_collection">已收藏</string>
    <string name="join_car">加入购物车</string>
    <string name="tuhao_rank">土豪榜</string>
    <string name="list_rules">上榜规则</string>
    <string name="join_record">参与记录</string>
    <string name="joined">参与了</string>
    <string name="user_info">%1$s（%2$s&#160;&#160;&#160;&#160;%3$s）</string>
    <string name="join_xx_times">参与了%1$d人次</string>
    <string name="your_join">您参与：</string>
    <string name="see_indiana_code">查看夺宝号</string>
    <string name="winner">获得者：</string>
    <string name="join_times">参与份数：</string>
    <string name="xx_fen">%1$d份</string>
    <string name="goon_indiana">继续夺宝</string>
    <string name="pay_now">立即支付</string>

    <string name="all">全部</string>
    <string name="win">获胜</string>
    <string name="gooning">进行中</string>
    <string name="announced">已揭晓</string>
    <string name="please_edit_right_phone_number">请输入正确的手机号码</string>
    <string name="retry_xx">重试（%1$d）</string>
    <string name="please_edit_verification">请输入验证码</string>
    <string name="loading">加载中&#8230;</string>
    <string name="code_has_send">验证码已发送，请注意查收</string>
    <string name="please_login">请登录</string>
    <string name="edit_address">编辑地址</string>
    <string name="please_edit_receiver_name">请输入收货人</string>
    <string name="please_edit_receiver_phone">请输入联系电话</string>
    <string name="please_edit_receiver_address">请输入收货地址</string>
    <string name="update_success">修改成功</string>
    <string name="add_success">添加成功</string>
    <string name="add_fail">添加失败</string>
    <string name="update_fail">修改失败</string>
    <string name="deleting">正在删除&#8230;</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="xx_precent">%1$d&#037;</string>
    <string name="goods_has_added_cart">商品已经添加到购物车</string>
    <string name="login_fail_please_retry">登录失败，请重试</string>
    <string name="please_install_wechat">请先安装微信</string>
    <string name="please_install_qq">请先安装QQ</string>
    <string name="please_install_weibo">请先安装新浪微博</string>
    <string name="share_to">分享到</string>
    <string name="cancel">取消</string>
    <string name="permission_fail">授权失败</string>
    <string name="permission_fail_notice">您拒绝了我们必要的一些权限，为保证您能正常使用app，请在设置中授权您！</string>
    <string name="go_to_setting">好，去设置！</string>
    <string name="you_has_no_login_please_login">您还未登录，请先登录</string>
    <string name="input_right_number">请输入正确的数量</string>

    <string name="price_10_area">10元\n专区</string>
    <string name="second_open">秒开\n专区</string>
    <string name="we_has_receiver_your_wish">我们已经收到您的愿望，感谢您对我们的支持</string>
    <string name="please_edit_your_need_feedback_questions">请输入您要反馈的问题</string>
    <string name="please_edit_your_wish_goods">请输入您的心愿产品</string>
    <string name="please_edit_your_bug_feedback">我们已经收到您反馈的问题，感谢您对我们的支持</string>
    <string name="send">发表</string>
    <string name="price_10_indiana">10元夺宝</string>
    <string name="second_open_indiana">秒开夺宝</string>
    <string name="share_order_success">晒单成功</string>
    <string name="share_order_fail">晒单失败，请重试</string>
    <string name="please_edit_content">请输入您要分享的内容</string>

    <string name="recharge_notice">充值金额用于购买等价夺宝币</string>
    <string name="please_choose_recharge_money">请选择充值金额(元)</string>
    <string name="please_choose_pay_way">请选择支付方式</string>
    <string name="recharge_now">立即充值</string>
    <string name="find_password">找回密码</string>
    <string name="password_reset_success">密码重置成功</string>

    <string name="win_rule">根据当期<font color="#ED1A43">时时彩</font> “开奖号”的<font color="#ED1A43">最后一个数字</font>，
        为单则“买单”夺宝成功，反之“买双夺宝成功”。</string>
    <string name="question_1">一、充值失败怎么办？</string>
    <string name="question_2">二、关于“商品不满意，无条件退款”怎么退款?</string>
    <string name="question_3">三、夺宝成功怎么领取商品?</string>
    <string name="answer_1">\t 1.如果已经付款成功显示充值失败，可能是网络问题导致充值失败，请联系官方客服，核对订单，我们将人工为您充值。\n\t 2.如果无法充值成功，可能是系统使用的三方支付异常，请联系官方客服，我们会尽快恢复支付。</string>
    <string name="answer_2">\t本平台出售的全部商品，用户不满意一律无条件退款。您可以通过兑换功能直接退货把商品兑换成夺宝币，然后通过提现就可以得到现金了。\n\t注意：\n\t商品可以退换，订单无法取消，您一旦参与夺宝，支付成功以后系统将自动把您跟其他夺宝用户进行匹配共同购买一个商品，订单匹配成功以后是不能取消的。</string>
    <string name="answer_3">\t如果夺宝成功，请您联系官方客服发货。官方客服QQ为：170059106。请认准官方客服，不要轻信他人，以防被骗。</string>
</resources>
