<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/user_avater"
            android:layout_width="79dp"
            android:layout_height="79dp"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:src="@drawable/ic_default_avater" />

        <TextView
            android:id="@+id/image_level"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_alignBottom="@+id/user_avater"
            android:layout_alignRight="@+id/user_avater"
            android:background="@drawable/ic_mine_level"
            android:gravity="bottom"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_level"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="请登录"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="23dp"
            android:layout_toRightOf="@+id/user_avater"
            android:text="@string/mine_level"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/level"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/user_avater"
            android:text="@string/mine_score"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="17dp">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="22dp"
            android:text="@string/indiana_coin"
            android:textColor="@color/text_color_content"
            android:textSize="@dimen/text_size_middle" />

        <TextView
            android:id="@+id/coin_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/text1"
            android:text="@string/coin_number"
            android:textColor="@color/text_color_red_deep"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/recharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_recharge"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:text="@string/recharge"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_middle" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_color_gray2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/indiana_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_mine_indiana_record"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/ic_mine_arrow_right"
                android:gravity="center_vertical"
                android:paddingBottom="13.33dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="13.33dp"
                android:text="@string/indiana_record"
                android:textColor="@color/text_color_title"
                android:textSize="@dimen/text_size_middle" />

            <TextView
                android:id="@+id/win_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_mine_win_record"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/ic_mine_arrow_right"
                android:gravity="center_vertical"
                android:paddingBottom="13.33dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="13.33dp"
                android:text="@string/win_record"
                android:textColor="@color/text_color_title"
                android:textSize="@dimen/text_size_middle" />

            <TextView
                android:id="@+id/indiana_raiders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_mine_indiana_raiders"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/ic_mine_arrow_right"
                android:gravity="center_vertical"
                android:paddingBottom="13.33dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="13.33dp"
                android:text="@string/indiana_raiders"
                android:textColor="@color/text_color_title"
                android:textSize="@dimen/text_size_middle" />

            <TextView
                android:id="@+id/mine_collect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_mine_collect"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/ic_mine_arrow_right"
                android:gravity="center_vertical"
                android:paddingBottom="13.33dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="13.33dp"
                android:text="@string/mine_collect"
                android:textColor="@color/text_color_title"
                android:textSize="@dimen/text_size_middle" />

            <TextView
                android:id="@+id/mine_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_mine_mine_share"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/ic_mine_arrow_right"
                android:gravity="center_vertical"
                android:paddingBottom="13.33dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="13.33dp"
                android:text="@string/mine_share"
                android:textColor="@color/text_color_title"
                android:textSize="@dimen/text_size_middle" />

            <TextView
                android:id="@+id/mine_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_mine_mine_red"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/ic_mine_arrow_right"
                android:gravity="center_vertical"
                android:paddingBottom="13.33dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="13.33dp"
                android:text="@string/mine_red"
                android:textColor="@color/text_color_title"
                android:textSize="@dimen/text_size_middle" />

            <TextView
                android:id="@+id/receiver_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_mine_receiver_address"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/ic_mine_arrow_right"
                android:gravity="center_vertical"
                android:paddingBottom="13.33dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="13.33dp"
                android:text="@string/receiver_address"
                android:textColor="@color/text_color_title"
                android:textSize="@dimen/text_size_middle" />

            <TextView
                android:id="@+id/service_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_mine_service_center"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/ic_mine_arrow_right"
                android:gravity="center_vertical"
                android:paddingBottom="13.33dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="13.33dp"
                android:text="@string/service_center"
                android:textColor="@color/text_color_title"
                android:textSize="@dimen/text_size_middle" />

            <TextView
                android:id="@+id/share_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_mine_share_app"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/ic_mine_arrow_right"
                android:gravity="center_vertical"
                android:paddingBottom="13.33dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="13.33dp"
                android:text="@string/share_app"
                android:textColor="@color/text_color_title"
                android:textSize="@dimen/text_size_middle" />

            <TextView
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_mine_setting"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/ic_mine_arrow_right"
                android:gravity="center_vertical"
                android:paddingBottom="13.33dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="13.33dp"
                android:text="@string/setting"
                android:textColor="@color/text_color_title"
                android:textSize="@dimen/text_size_middle" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>