<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.youth.banner.Banner
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="#4444" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/indiana_price_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/ic_indiana_price_10"
            android:gravity="center_horizontal"
            android:text="@string/indiana_price_10"
            android:textColor="@color/text_color_des"
            android:textSize="@dimen/text_size_xsmall" />

        <TextView
            android:id="@+id/indiana_fast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/ic_indiana_fast"
            android:gravity="center_horizontal"
            android:text="@string/indiana_fast"
            android:textColor="@color/text_color_des"
            android:textSize="@dimen/text_size_xsmall" />

        <TextView
            android:id="@+id/indiana_red88"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/ic_indiana_red_88"
            android:gravity="center_horizontal"
            android:text="@string/indiana_red88"
            android:textColor="@color/text_color_des"
            android:textSize="@dimen/text_size_xsmall" />

        <TextView
            android:id="@+id/invite_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/ic_invite_money"
            android:gravity="center_horizontal"
            android:text="@string/invite_money"
            android:textColor="@color/text_color_des"
            android:textSize="@dimen/text_size_xsmall" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_indiana_notice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/indiana_headline"
            android:textColor="@color/text_color_des"
            android:textSize="@dimen/text_size_xsmall" />

        <wiki.scene.shop.widgets.verticalrollingtextview.VerticalRollingTextView
            android:id="@+id/notice_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_xsmall"
            app:animInterval="5000" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#313131" />
</LinearLayout>